2008-12-02  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/index.pot: Updated Spanish translation.

	* include/languages/fr.po, include/languages/fr.mo: Updated French
	  translation.

2008-12-02  Jorge gonzalez  <jorgegonz@artica.es>

	* pandoradb_data.sql: Added Bengali to translations.

	* include/languages/index.pot: Updated po template.

	* include/languages/bn.po, include/languages/bn.mo: Added Bengali
	  translation from Rosetta and GNOME Translation Memory.

	* include/languages/Makefile: Added Bengali to translations.

	* include/languages/de.po, include/languages/de.mo: Updated German
	  translation from Rosetta.

2008-12-02  Esteban Sanchez <estebans@artica.es>

	* godmode/agentes/manage_config.php: Fixed SQL sentence generation
	when copying a module. It was causing PHP notices and nothing was
	being copied.

2008-12-01  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/index.pot: Updated po template.

	* include/languages/de.po, include/languages/de.mo: Updated German
	  translation from Rosetta translations.

2008-11-27  Jorge Gonzalez  <jorgegonz@artica.es>

	* pandoradb_data.sql: Added Greek translation.

	* include/languages/index.pot: Updated po template.

	* include/languages/Makefile: Added 'el' files for translation.

	* include/languages/cs.po, include/languages/pt_BR.po, 
	  include/languages/es.po, include/languages/pl.mo, 
	  include/languages/it.mo, include/languages/sl.mo, 
	  include/languages/sk.po, include/languages/uk.po, 
	  include/languages/pt.mo, include/languages/ro.po, 
	  include/languages/ast.mo, include/languages/cs.mo, 
	  include/languages/ar.po, include/languages/pt_BR.mo, 
	  include/languages/es.mo, include/languages/fr.po, 
	  include/languages/sk.mo, include/languages/uk.mo, 
	  include/languages/ro.mo, include/languages/ca.po, 
	  include/languages/da.po, include/languages/tr.po, 
	  include/languages/sv.po, include/languages/de.po, 
	  include/languages/ja.po, include/languages/zh_TW.po, 